--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
   <html>
   <head>
-    <title>Page Title</title>
+    <title>MatchMaker</title>
 </head>
 <body>
 
   <h1>Finding Love in 2025</h1>
-  <p>This is a paragraph.</p>
+  <p>Instructions:</p>
 
 </body>
 </html>
