--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-    <title>Matchmaker</title>
+<html lang="en">
+
+<!-- 
+    Author for parts of it:  Eric Pogue
+
+-->
+
+<head>
+	<meta charset="UTF-8">
+	<title>Matchmaker Lite</title>
 </head>
+
 <body>
+	<h1>Matchmaker Lite</h1>
+	<p>Instructions...</p>
 
-  <h1>Finding Love in 2025</h1>
-  <p>Instructions:</p>
+	
 
-</body>
-</html>
+	<label>Rock n' Roll is the best genre</label><br />
+	<select id="q1">
+		<option value="5">Strongly Agree</option>
+		<option value="4">Agree</option>
+		<option value="3">Neither agree nor disagree</option>
+		<option value="2">Disagree</option>
+		<option value="1">Strongly Disagree</option>
+	</select>
+
+	<label>1977 Pontiac Trans Am is the best</label><br />
+	<select id="q1">
+		<option value="5">Strongly Agree</option>
+		<option value="4">Agree</option>
+		<option value="3">Neither agree nor disagree</option>
+		<option value="2">Disagree</option>
+		<option value="1">Strongly Disagree</option>
+	</select>
