Updates to code including more questions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	
 
-	<label>Rock n' Roll is the best genre</label><br />
+	<label>Music is great and all genres are good</label><br />
 	<select id="q1">
 		<option value="5">Strongly Agree</option>
 		<option value="4">Agree</option>
@@ -26,7 +26,7 @@
 		<option value="1">Strongly Disagree</option>
 	</select>
 
-	<label>1977 Pontiac Trans Am is the best</label><br />
+	<label>Personality over looks</label><br />
 	<select id="q2">
 		<option value="5">Strongly Agree</option>
 		<option value="4">Agree</option>
@@ -34,3 +34,31 @@
 		<option value="2">Disagree</option>
 		<option value="1">Strongly Disagree</option>
 	</select>
+
+	<label>Staying home can be as fun as going out</label><br />
+	<select id="q3">
+		<option value="5">Strongly Agree</option>
+		<option value="4">Agree</option>
+		<option value="3">Neither agree nor disagree</option>
+		<option value="2">Disagree</option>
+		<option value="1">Strongly Disagree</option>
+	</select>
+
+	<label>Both people should pay for things such as dates</label><br />
+	<select id="q4">
+		<option value="5">Strongly Agree</option>
+		<option value="4">Agree</option>
+		<option value="3">Neither agree nor disagree</option>
+		<option value="2">Disagree</option>
+		<option value="1">Strongly Disagree</option>
+	</select> 
+
+	<label>It is important to communicate and understand what people are saying</label><br />
+	<select id="q5">
+		<option value="5">Strongly Agree</option>
+		<option value="4">Agree</option>
+		<option value="3">Neither agree nor disagree</option>
+		<option value="2">Disagree</option>
+		<option value="1">Strongly Disagree</option>
+	</select>
+
